# hierarchical_data

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
animals/: admin.py  forms.py  models.py  views.py
animals/migrations/: 0001_initial.py
nature_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: form.html  index.html  login.html  signup.html
