[tool.poetry]
name = "hierarchical_data"
version = "0.1.0"
description = ""
authors = ["luisfff29 <luisfff29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
flake8 = "^3.8.3"
autopep8 = "^1.5.3"
django-mptt = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
